bat.bool1.in1020.In1020.scala.error
Compilation error:
In1020:2: error: type mismatch;
 found   : Int
 required: Boolean
  if (10<a<b){
           ^